@@ -1,4 +1,0 @@
-[DEFAULT]
-description = Container for portal members' home directories
-title = Members
-
